feat(overseerr): Add number of requests + email to user tiles

--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -415,6 +415,9 @@
     "tautulli.Video": "Video",
     "tautulli.ViewWebGUI": "View Web GUI",
     "tautulli.Year": "Year",
+    "overseerr.NoRequests": "No Requests",
+    "overseerr.OneRequest": "1 Request",
+    "overseerr.SomeRequests": "{} Requests",
     "overseerr.Requests": "Requests",
     "overseerr.NoRequestsFound": "No Requests Found",
     "overseerr.NoUsersFound": "No Users Found",
